--- a/소스코드.ipynb
+++ b/소스코드.ipynb
@@ -64,10 +64,10 @@
         "\n",
         "\n",
         "# API key 입력\n",
-        "CONSUMER_KEY = 'vKEbJ6vcs8lEUoNIOfzKC3U8P'     \n",
-        "CONSUMER_SECRET = 'Ts0Uw4pgHQjfwb4Llm5GU77MiflKoZE6UUy6wPp5eChhPcITUe' \n",
-        "ACCESS_TOKEN = '1386198323288150018-kwKvr3fxxk3Ysr6qAU7ra9pPQZmXjV' \n",
-        "ACCESS_TOKEN_SECRET = 'eEkK83XKk9oPrCkphdwovZxbR2qeNA13HNr8FvikPeLOz'    \n",
+        "CONSUMER_KEY = ''     \n",
+        "CONSUMER_SECRET = '' \n",
+        "ACCESS_TOKEN = '' \n",
+        "ACCESS_TOKEN_SECRET = ''    \n",
         "\n",
         "# API 접근\n",
         "auth = OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
@@ -78,8 +78,8 @@
         "#--------------------------------05/23 추가-----------------------------------\n",
         "#DB 연동\n",
         "data_words_db = pymysql.connect(\n",
-        "    user='py',\n",
-        "    passwd='1q2w3e4r!@#',\n",
+        "    user='',\n",
+        "    passwd='',\n",
         "    host='database-1.csxshuumxmig.ap-northeast-2.rds.amazonaws.com',\n",
         "    db='project',\n",
         "    charset='utf8mb4',\n",
